@@ -12,6 +12,7 @@ MOSQ_OBJS=mosquitto.o \
 		  read_handle_shared.o \
 		  send_mosq.o \
 		  send_client_mosq.o \
+		  socks_mosq.o \
 		  srv_mosq.o \
 		  thread_mosq.o \
 		  time_mosq.o \
@@ -74,6 +75,9 @@ send_mosq.o : send_mosq.c send_mosq.h
 	${CROSS_COMPILE}$(CC) $(LIB_CFLAGS) -c $< -o $@
 
 send_client_mosq.o : send_client_mosq.c send_mosq.h
+	${CROSS_COMPILE}$(CC) $(LIB_CFLAGS) -c $< -o $@
+
+socks_mosq.o : socks_mosq.c
 	${CROSS_COMPILE}$(CC) $(LIB_CFLAGS) -c $< -o $@
 
 srv_mosq.o : srv_mosq.c
