@@ -15,6 +15,7 @@ Important changes:
   connected.
 - New use_username_as_clientid option on the broker, for preventing hijacking
   of a client id.
+- The client library and clients now have experimental SOCKS5 support.
 
 
 Broker:
@@ -53,6 +54,7 @@ Broker:
 Clients:
 - Both clients can now load default configuration options from a file.
 - Add -1 (oneshot) option to mosquitto_sub.
+- Add --proxy SOCKS5 support for both clients.
 
 Client library:
 - Fix topic matching edge case.
@@ -61,6 +63,7 @@ Client library:
 - Fix SRV support when building with CMake.
 - Remove Python library (use Paho Python client instead).
 - Remove strict protocol #ifdefs.
+- Add experimental SOCKS5 support.
 - mosquitto_loop_forever now quits after a fatal error, rather than blindly
   retrying.
 
